1.重新规划页面UI

--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical">
 
     <com.owen.tab.TvTabLayout
+        android:visibility="gone"
         android:id="@+id/tab_layout"
         android:layout_width="match_parent"
         android:layout_height="60pt"
